--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "handlebars": "^4.7.7",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.3"
+  },
+  "scripts": {
+    "seed": "node seeds/seed.js"
   }
 }
